# Flask-App

./: .gitignore  10-FlaskApp.conf  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-debian.yml  python-unix.yml  python-unix.yml.rej  test-on-push.yaml
extruct_tutorial/: __init__.py
extruct_tutorial/tests/: _test.py  current.json  test_scrape.py
flask_app/: config.py  requirements.txt  wsgi.py
flask_app/flask_login_tutorial/: __init__.py  auth.py  scrape.py
src/: __init__.py  app.py  app_test.py
src/flask_app/: .env  config.py  cr.py  foobar.crt  foobar.csr  foobar.key  requirements.txt  uwsgi.ini  wsgi.py
src/flask_app/data/github.com/: 1c34dbd5-41f3-428e-865d-daec6d238b15-links.csv  1c34dbd5-41f3-428e-865d-daec6d238b15.html  1c34dbd5-41f3-428e-865d-daec6d238b15.json  4fa13b2f-eaea-4575-af32-dfbed76c3a50.html  4fa13b2f-eaea-4575-af32-dfbed76c3a50.json  fbc8676c-930e-4fd5-9d9c-71f90f52fa8e.html  fbc8676c-930e-4fd5-9d9c-71f90f52fa8e.json
src/flask_app/flask_login_tutorial/: __init__.py  assets.py  auth.py  config.py  decorators.py  forms.py  models.py  routes.py  rsa_key.pub  scrape.py
src/flask_app/instance/: database.db  database_20221217_132700.db  database_20221221_162837.db  database_20221221_162912.db  database_20221221_163346.db  database_20221221_175000.db  database_20221221_175304.db  database_20221221_175344.db  database_20221221_175806.db
src/test/: app_t.py  app_test.py
src/wyl/: __init__.py
unix_conf/rsyslog/: 10-flask_app.conf
unix_conf/systemd/: flask_app.service
(+55 files in other folders)
