[tool.poetry]
name = "Flask-App"
version = "0.0.1"
description = "Scraper in Flask"
authors = ["Sascha Frank <sascha.frank.88@gmx.de>"]
maintainers = ["Sascha Frank <sascha.frank.88@gmx.de>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/Izzy3110/Flask-App"
documentation = "https://github.com/Izzy3110/Flask-App"
keywords = [
    "Scraper in Flask-App"
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
extruct = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry==1.3.1"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "main:scrape"

[tool.poetry.urls]
issues = "https://github.com/Izzy3110/Flask-App/issues"
